# DVC-gha

./: .gitignore  interviews.csv.dvc  pyproject.toml
.dvc/: config
.github/workflows/: cml_report.yaml
experiments/: linear_model.py  requirements.txt  train.py
