[project]
name = "DVC-gha"
version = "0.1.0"
description = ""
authors = [
    {name = "thanakara"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc[gdrive] (>=3.59.0,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
